--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "boilerplate-code for a hapi-plugin using typescript and gulp",
   "main": "index.js",
   "scripts": {
-    "test": "make test-cov"
+    "test": "make test-cov",
+    "postinstall": "gulp ts"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,10 @@
     "typescript",
     "gulp"
   ],
-  "author": "",
+  "contributors": [{
+    "name": "Timo Weiß",
+    "email": "info@timo-weiss.com"
+  }],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/premily/hapi-typescript-plugin/issues"
@@ -27,7 +31,16 @@
   },
   "devDependencies": {
     "code": "1.x.x",
+    "gulp": "^3.8.11",
     "hapi": "8.x.x",
-    "lab": "5.x.x"
-  },
+    "lab": "5.x.x",
+    "gulp-jshint": "^1.9.4",
+    "gulp-nodemon": "^2.0.2",
+    "gulp-notify": "^2.2.0",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-tsc": "^0.9.3",
+    "gulp-typescript": "^2.5.0",
+    "merge2": "^0.3.1",
+    "node-notifier": "^4.1.2"
+  }
 }
